# rmpr

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
src/: audio.rs  audio_playing.rs  browser.rs  config.rs  file_data.rs  input_handler.rs  input_handling.rs  main.rs  metadata_manager.rs  sink_handler.rs  sink_handling.rs  tui.rs
src/data/: config.rs
src/data/metadata/: file_data.rs  file_metadata.rs  metadata_manager.rs  metadata_queue.rs  mod.rs
src/handlers/: input.rs  input_handler.rs  mod.rs  sink.rs  sink_handler.rs
src/render/: browser.rs  mod.rs
src/render/handlers/: key_event.rs  mod.rs  queue.rs
src/render/tui/: app.rs  render.rs
src/tui/: event_handler.rs  fs_browser.rs  mod.rs  tui.rs  tui_render.rs
src/tui/handle_events/: key_event.rs  mod.rs  queue_funcs.rs
src/tui/render/: app.rs  display.rs  mod.rs  widget_funcs.rs
test-files/: config.toml
