[package]
name = "rmpr"
version = "0.1.0"
edition = "2021"

[dependencies]
claxon = "0.4.3"
color-eyre = "0.6.3"
cpal = "0.15.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rodio = "0.20.1"

[profile.release]
debuginfo     = 0
opt-level     = "z"
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true
