[package]
name = "rmpr"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
symphonia = "0.5.4"

[profile.release]
opt-level     = 3
debug         = 0
strip         = true
lto           = true
codegen-units = 1
panic         = "abort"
