[package]
name    = "rmpr"
version = "0.1.0"
edition = "2021"

[dependencies]
audiotags  = "0.5.0"
clap       = "4.5.32"
color-eyre = "0.6.3"
crossterm  = "0.28.1"
dirs = "6.0.0"
ratatui    = "0.29.0"
rodio      = { version = "0.20.1", features = ["symphonia-all"] }
serde      = { version = "1.0.219", features = ["derive"] }
symphonia  = "0.5.4"
toml       = "0.8.20"

[profile.release]
opt-level     = 3
debug         = 0
strip         = true
lto           = true
codegen-units = 1
panic         = "unwind"
